# aesthetics-compiler

./: .gitignore  README.md  pyproject.toml
benchmarks/: README.md  __init__.py  contenders.py  datasets.py  extractor_eval.py  run_aadb.py
docs/: am_dag.md  architecture.md  extraction.md  projections.md
examples/: mondrian_description.txt  rothko_description.txt
paper/: paper.bib  paper.md
src/aesthetic_compiler/: __init__.py  cli.py
src/aesthetic_compiler/am_dag/: dag.py
src/aesthetic_compiler/annotation/: base.py  html_extractor.py  image_extractor.py  mock_extractor.py  multimedia_extractor.py  rule_extractor.py
src/aesthetic_compiler/audit/: hash_chain.py
src/aesthetic_compiler/export/: schema_org.py
src/aesthetic_compiler/ingestion/: html_loader.py
src/aesthetic_compiler/ir/: schemas.py
src/aesthetic_compiler/pipeline/: orchestrator.py
src/aesthetic_compiler/projections/: arnheim.py  base.py  berlyne.py  birkhoff.py  gestalt.py
src/aesthetic_compiler/segmentation/: segmenter.py
src/aesthetics_compiler/: cli.py  tiers.py
src/aesthetics_compiler/am_dag/: dag.py
src/aesthetics_compiler/annotation/: base.py  html_extractor.py  image_extractor.py  mock_extractor.py  multimedia_extractor.py  nlp_extractor.py  rule_extractor.py
tests/: test_cli.py  test_export.py  test_extractor_bakeoff.py  test_graph.py  test_html_pipeline.py  test_image_pipeline.py  test_ir.py  test_mock_extractor.py  test_multimedia_pipeline.py  test_nlp_tier.py  test_orchestrator.py  test_projection_values.py  test_projections.py  test_recall.py  test_regressions.py
(+43 files in other folders)
